--- a/lecture-notes/lecture01-pseudoinverse.tex
+++ b/lecture-notes/lecture01-pseudoinverse.tex
@@ -152,6 +152,6 @@
     \begin{theorema}{}{}
         For each matrix $A \in M_{m\times n}(\C)$, its pseudoinverse matrix $A^+$ exists. If $A = F \cdot G$ is a full rank decomposition, then
         \[
-            A^+ = G^+F^+ = G^*\left(G,G^*\right)^{-1} \left(F^*, F\right)^{-1}F^*. 
+            A^+ = G^+F^+ = G^*\left(G \cdot G^*\right)^{-1} \left(F^* \cdot F\right)^{-1}F^*. 
         \]
     \end{theorema}
