--- a/lecture-notes/lecture05-metrics.tex
+++ b/lecture-notes/lecture05-metrics.tex
@@ -581,10 +581,10 @@ $$
 \begin{proposition}{}{}
     Let $V$ be a normed space.
     \begin{enumerate}
-        \item Any two balls $B_R(\vec{x})$ and $B_R(\vec{y})$,  are congruent (same geometric figures). That is, there is a parallel translation $v$ which maps one ball onto another. Specifically, we mean that 
+        \item Any two balls $B_R(\vec{x})$ and $B_R(\vec{y})$,  are congruent (same geometric figures). That is, there is a parallel translation $\vec{x} \mapsto \vec{x}+\vec{v}$, which maps one ball onto another. Specifically, we mean that 
         $$B_R(\vec{x})+\vec{v}=B_R(\vec{y}).$$
         
-        \item For any two balls $B_R(\vec{c})$ and $B_r(\vec{c})$, there is a homothety $\vec{x} \mapsto \lambda \vec{x}$, which transfers one ball onto another, where. Specifically, we mean that 
+        \item For any two balls $B_R(\vec{c})$ and $B_r(\vec{c})$, there is a homothety $\vec{x} \mapsto \lambda \vec{x}$, which transfers one ball onto another. Specifically, we mean that 
         $$B_R(\vec{c}) = \lambda B_r(\vec{c}).$$
     \end{enumerate}
 \end{proposition}
@@ -614,7 +614,7 @@ $$
     \end{enumerate}
 \end{proof}
 \begin{definition}{Inner product}{}
-    Let $V$ be a vector space. An inner product on a real vector space $V$ is a function
+    An inner product on a real vector space $V$ is a function
     $$
     (\cdot,\cdot): V\times V\rightarrow \mathbb{R},
     $$
